--- a/leagues/templates/leagues/league_list.html
+++ b/leagues/templates/leagues/league_list.html
@@ -1,133 +1,112 @@
 {% extends "atomic/pages/list.html" %} 
-{% block page_title %} Lista de times {% endblock page_title %}
 
+<!-- Page title for leagues list page -->
+{% block list_page_title %}
+  Ligas | Teams List
+{% endblock list_page_title %}
 
 {% block content %}
 {% load custom_filters %}
 
+<!-- Main content section -->
 <h2 class="block sm:px-6 lg:px-8 text-2xl flex items-center gap-1">
   {% include 'icons/league.html' %}
+  <!-- Heading for leagues -->
   Ligas 
 </h2>
 
-  <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
-    <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
-      <div class="overflow-hidden">
-        <table class="min-w-full">
-          <thead class="bg-white border-b">
-            <tr>
-              <th
-                scope="col"
-                class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
-              >
-                #
-              </th>
-              <th
-                scope="col"
-                class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
-              >
-
+<!-- Overflow container for horizontal scrolling -->
+<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+  <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
+    <div class="overflow-hidden">
+      <!-- Table for displaying league data -->
+      <table class="min-w-full">
+        <thead class="bg-white border-b">
+          <tr>
+            <!-- Table headers -->
+            <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">#</th>
+            <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <!-- Column header for league name -->
               <a href="{% url 'league_list' %}?field=name{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
                 Liga 
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
-
-                
-              </th>
-              <th
-                scope="col"
-                class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
-              >
-                <a href="{% url 'league_list' %}?field=outcomes{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                  Despesas 
-                  <i class="fa fa-caret-down" aria-hidden="true"></i>
-                </a>
-  
-              </th>
-              <th
-                scope="col"
-                class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
-              >
-                <a href="{% url 'league_list' %}?field=incomes{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                  Renda 
-                  <i class="fa fa-caret-down" aria-hidden="true"></i>
-                </a>
-              </th>
-              <th
-                scope="col"
-                class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
-              >
-                
-                <a href="{% url 'league_list' %}?field=balance{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-                  Saldo 
-                  <i class="fa fa-caret-down" aria-hidden="true"></i>
-
-                </a>
-              </th>
-            <th
-            scope="col"
-            class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
-          >
-
-          <a href="{% url 'league_list' %}?field=num_teams{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
-            Equipes 
-            <i class="fa fa-caret-down" aria-hidden="true"></i>
-          </a>
-
-            
-          </th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for league in page_obj %}
-            {% cycle 'bg-gray-100 border-b' 'bg-white border-b' as row_class silent %}
-            <tr
-              class="{% if forloop.counter0|divisibleby:2 %}{{ row_class }}{% else %} bg-white border-b {% endif %}"
-            >
-              <td
-                class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900"
-              >
-                <img width="40" src="{{ league.small_img }}" class="min-w-[40px]" />
-              </td>
-              <td
-                class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
-              >
-                <a href="{% url 'league_detail' pk=league.pk %}" class="flex items-center justify-start gap-1">
-                  <img src="{{ league.country_img }}" />
-                  <span class="hover:underline"> {{ league.name }} </span>
-                </a>
-              </td>
-              <td
-                class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
-              >
-                <span> {{ league.outcomes|passToFloat }} </span>
-              </td>
-              <td
-                class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
-              >
-                <span>{{ league.incomes|passToFloat }}</span>
-              </td>
-              <td
-                class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap"
-              >
-                {% if "-" in league.balance %}
-                    <span class="text-red-700 font-bold"> {{ league.balance | passToFloat }} </span>
-                {% else %}
-                    <span class="text-green-700 font-bold"> {{ league.balance | passToFloat }} </span>
-                {% endif %}
+            </th>
+            <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <!-- Column header for expenses -->
+              <a href="{% url 'league_list' %}?field=outcomes{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                Despesas 
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+              </a>
+            </th>
+            <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <!-- Column header for income -->
+              <a href="{% url 'league_list' %}?field=incomes{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                Renda 
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+              </a>
+            </th>
+            <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <!-- Column header for balance -->
+              <a href="{% url 'league_list' %}?field=balance{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                Saldo 
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+              </a>
+            </th>
+            <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
+              <!-- Column header for number of teams -->
+              <a href="{% url 'league_list' %}?field=num_teams{% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %}">
+                Equipes 
+                <i class="fa fa-caret-down" aria-hidden="true"></i>
+              </a>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <!-- Loop through league objects -->
+          {% for league in page_obj %}
+          <!-- Alternating row colors -->
+          {% cycle 'bg-gray-100 border-b' 'bg-white border-b' as row_class silent %}
+          <tr class="{% if forloop.counter0|divisibleby:2 %}{{ row_class }}{% else %} bg-white border-b {% endif %}">
+            <!-- League data -->
+            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+              <img width="40" src="{{ league.small_img }}" class="min-w-[40px]" />
             </td>
-            
-              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                {{ league.num_teams  }}
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <!-- League name -->
+              <a href="{% url 'league_detail' pk=league.pk %}" class="flex items-center justify-start gap-1">
+                <img src="{{ league.country_img }}" />
+                <span class="hover:underline"> {{ league.name }} </span>
+              </a>
             </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <!-- Expenses -->
+              <span> {{ league.outcomes|passToFloat }} </span>
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <!-- Income -->
+              <span>{{ league.incomes|passToFloat }}</span>
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <!-- Balance -->
+              {% if "-" in league.balance %}
+                  <span class="text-red-700 font-bold"> {{ league.balance | passToFloat }} </span>
+              {% else %}
+                  <span class="text-green-700 font-bold"> {{ league.balance | passToFloat }} </span>
+              {% endif %}
+            </td>
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <!-- Number of teams -->
+              {{ league.num_teams  }}
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
   </div>
+</div>
 
-  {% include 'atomic/organisms/list_pagination.html' %}
-
+<!-- Include pagination -->
+{% include 'atomic/organisms/list_pagination.html' %}
 {% endblock content %}
