--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -2,7 +2,7 @@
 {% block page_title %}
 Lista de times
 {% endblock page_title %} 
-{% block content %} 
+{% block content %} {% include 'breadcrumb.html' %} 
 {% load custom_filters %} {% load static %}
 
 <div class="w-[280px] m-auto">
