--- a/leagues/templates/leagues/league_list.html
+++ b/leagues/templates/leagues/league_list.html
@@ -5,15 +5,16 @@
   Ligas | Teams List
 {% endblock list_page_title %}
 
-{% block content %}
+{% block list_content %}
 {% load custom_filters %}
 
 <!-- Main content section -->
-<h2 class="block sm:px-6 lg:px-8 text-2xl flex items-center gap-1">
+<div class="block sm:px-6 lg:px-8 text-2xl flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/league.html' %}
-  <!-- Heading for leagues -->
-  Ligas 
-</h2>
+  <h2 class="background-color rounded-md">
+    Ligas
+  </h2>
+</div>
 
 <!-- Overflow container for horizontal scrolling -->
 <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
@@ -109,4 +110,4 @@
 
 <!-- Include pagination -->
 {% include 'atomic/organisms/list_pagination.html' %}
-{% endblock content %}
+{% endblock list_content %}
