--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 .montserrat {
@@ -19,8 +18,16 @@
 }
 
 
-h1, h2, h3{
+h1, h2{
   font-family: "Montserrat", sans-serif;
+  padding: 5px 10px;
+}
+
+
+
+
+h3, h4, h5, h6, li, a, span{
+  font-family: "Roboto", sans-serif;
 }
 
 .update_color_form *:not(button){
