--- a/teams/templates/teams/team_list.html
+++ b/teams/templates/teams/team_list.html
@@ -5,14 +5,17 @@
   Equipes | Teams List
 {% endblock list_page_title %}
 
-{% block content %}
+{% block list_content %}
 {% load custom_filters %}
 
 <!-- Main content section -->
-<h2 class="block sm:px-6 lg:px-8 text-2xl flex items-center gap-1">
+
+<div class="block sm:px-6 lg:px-8 text-2xl flex items-center gap-1 justify-center my-[14px]">
   {% include 'icons/ball.html' %}
-  Equipes
-</h2>
+  <h2 class="background-color rounded-md">
+    Equipes
+  </h2>
+</div>
 
 <!-- Table container -->
 <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
@@ -84,4 +87,4 @@
 
 <!-- Include pagination -->
 {% include 'atomic/organisms/list_pagination.html' %}
-{% endblock content %}
+{% endblock list_content %}
