--- a/templates/atomic/cells/links.html
+++ b/templates/atomic/cells/links.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="{% static 'js/tailwind.config.js' %}"></script>
 <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 <link rel="stylesheet" href="{% static 'css/slick/slick-theme.css' %}" />
 <link rel="stylesheet" href="{% static 'css/slick/slick.css' %}" />
@@ -14,7 +16,7 @@
   href="https://www.cssscript.com/demo/interactive-svg-world-map/dist/svg-worldmap.css"
   rel="stylesheet"
 />
-<script src="https://cdn.tailwindcss.com"></script>
+
 <link
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
