feat: retrieve country highlight data from django backend

--- a/teams/templates/teams/team_detail.html
+++ b/teams/templates/teams/team_detail.html
@@ -117,7 +117,7 @@
               <span>{{ player.country_name }}</span>
             </td>
             <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap text-right">
-              <span>{{ player.value_market }}</span>
+              <span>{{ player.value_market|passToFloat }}</span>
             </td>
           </tr>
           {% endfor %}
