--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -18,113 +18,96 @@
   </h2>
 </div>
 
-<div class="highlights flex justify-start gap-4 px-8">
+<div class="highlights mb-6 mt-8 flex justify-start gap-6 px-8">
   <div class='w-[20%]'>
     <p class="text-xs text-left font-sm block w-auto p-1 color-text absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
     <div class="highlight_card h-full w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+      {% if top_league %}
       <div class="flex flex-col items-center py-5 px-4">
-          <img class=" h-24 mb-3" src="http://127.0.0.1:8000/media/images/leagues/copa-de-la-liga-profesional-de-futbol17.png" alt="CA Boca Juniors"/>
-          <a href="#" class="mb-1 text-xl font-medium text-gray-900 min-h-[60px] text-center">Superliga</a>
-          <span class="text-lg text-green-700 font-bold">€75.95m</span>
+        <img class=" h-24 mb-3" src="/media/images/leagues/{{top_league.slug}}{{top_league.id}}.png" alt="{{top_league.name}}"/>
+        <a href="{% url 'league_detail' pk=top_league.pk %}" class="mb-1 text-xl font-medium text-gray-900 min-h-[60px] text-center">{{top_league.name}}</a>
+        <span class="text-lg text-green-700 font-bold">{{top_league.balance|passToFloat}}</span>
       </div>
+      {% else %}
+      <p class="text-xs text-center font-sm block w-auto p-1 color-text">SEM DADOS</p>
+      {% endif %}
     </div>
-    
   </div>
 
   <div class='w-[20%]'>
     <p class="text-xs text-left font-sm block w-auto p-1 color-text absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
     <div class="highlight_card h-full w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
+      {% if top_team %}
       <div class="flex flex-col items-center py-5 px-4">
-          <img class=" h-24 mb-3" src="http://127.0.0.1:8000/media/images/teams/ca-boca-juniors307.png" alt="CA Boca Juniors"/>
-          <a href="#" class="mb-1 text-xl font-medium text-gray-900 min-h-[60px] text-center">CA Boca Juniors</a>
-          <span class="text-lg text-green-700 font-bold">€75.95m</span>
+          <img class=" h-24 mb-3" src="/media/images/teams/{{top_team.slug}}{{top_team.id}}.png" alt="{{top_team.name}}"/>
+          <a href="{% url 'team_detail' pk=top_team.pk %}" class="mb-1 text-xl font-medium text-gray-900 min-h-[60px] text-center"> {{top_team.name}}</a>
+          <span class="text-lg text-green-700 font-bold">{{top_team.total_market_value|passToFloat }}</span>
       </div>
+      {% else %}
+      <p class="text-xs text-center font-sm block w-auto p-1 color-text">SEM DADOS</p>
+      {% endif %}
     </div>
   </div>
 
   <div class="relative w-[60%]">
-    <p class="text-xs text-center block w-auto p-1 color-text absolute transform translate-y-[-100%]">TOP 3 JOGADORES</p>
+    <p class="text-xs text-center block w-auto p-1 color-text absolute transform translate-y-[-100%]">TOP JOGADORES QUE JOGAM NO PAÍS</p>
 
     <!-- Table for displaying league data -->
-    <div class="overflow-auto">
-      <table class="min-w-full h-full rounded-lg overflow-hidden shadow">
-    
-        <thead class="bg-white border-b ">
-          <tr class="rounded-lg">
-            <th scope="col" class="text-sm font-medium text-gray-900 px-4 py-2 text-center">
-              <a href="#?field=name&amp;order=asc">
+    <div class="overflow-auto shadow">
+      <table class="min-w-full h-full rounded-lg overflow-hidden">
+                <thead class="bg-white border-b">
+          <tr>
+            <th
+              scope="col"
+              class="text-sm font-medium text-gray-900 px-6 py-4 text-center"
+            >
+
                 Jogador
-                <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
             </th>
-            <th scope="col" class="text-sm font-medium text-gray-900 px-4 py-2 text-left" s="">
-            <a href="#?field=pos&amp;order=asc">
-              Posição
-              <i class="fa fa-caret-down" aria-hidden="true"></i>
-            </a>
-          </th>
-    
-    
-            <th scope="col" class="text-sm font-medium text-gray-900 px-4 py-2 text-right">
-              <a href="#?field=value_market&amp;order=asc">
+            <th
+              scope="col"
+              class="text-sm font-medium text-gray-900 px-6 py-4 text-left"s
+            >
+                Posição
+            </th>
+            
+            <th
+              scope="col"
+              class="text-sm font-medium text-gray-900 px-6 py-4 text-right"
+            >
+
                 Valor de mercado 
-                <i class="fa fa-caret-down" aria-hidden="true"></i>
-              </a>
             </th>
           </tr>
         </thead>
         <tbody>
-           
-          <tr class="bg-gray-100 border-b">
-            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900 flex flex-col justify-left align-center">
-              <img width="52" height="52" src="https://img.a.transfermarkt.technology/portrait/header/101253-1607855845.jpg?lm=1" class="object-cover rounded-full w-[35px] h-[35px] m-auto block">
+
+          {% if top_players %}
+          {% for player in top_players %}
+          <tr class="{% cycle 'bg-gray-100 border-b' 'bg-white border-b' %}">
+            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900 flex flex-col justify-left align-left">
+              <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[35px] h-[35px] m-auto block">
                 <a href="#" class="gap-1 text-center hover:underline">
-                  Adaílton
+                  {{ player.name }}
                 </a>
             </td>
-    
-            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900">
-              <span>Left Winger</span>
+
+            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+              <span>{{ player.pos }}</span>
             </td>
-    
-            <td class="text-sm text-green-700 font-bold px-4 py-2 whitespace-nowrap text-right">
-              <span>€600k</span>
-            </td>
-          </tr>
-           
-          <tr class="bg-gray-100 border-b">
-            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900 flex flex-col justify-left align-center">
-              <img width="52" height="52" src="https://img.a.transfermarkt.technology/portrait/header/101253-1607855845.jpg?lm=1" class="object-cover rounded-full w-[35px] h-[35px] m-auto block">
-                <a href="#" class="gap-1 text-center hover:underline">
-                  Adaílton
-                </a>
-            </td>
-    
-            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900">
-              <span>Left Winger</span>
-            </td>
-    
-            <td class="text-sm text-green-700 font-bold px-4 py-2 whitespace-nowrap text-right">
-              <span>€600k</span>
+
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap text-right">
+              <span class="text-green-700 font-bold">{{ player.value_market|passToFloat }}</span>
             </td>
           </tr>
-           
-          <tr class="bg-gray-100 border-b">
-            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900 flex flex-col justify-left align-center">
-              <img width="52" height="52" src="https://img.a.transfermarkt.technology/portrait/header/101253-1607855845.jpg?lm=1" class="object-cover rounded-full w-[35px] h-[35px] m-auto block">
-                <a href="#" class="gap-1 text-center hover:underline">
-                  Adaílton
-                </a>
-            </td>
-    
-            <td class="px-4 py-2 whitespace-nowrap text-sm font-medium text-gray-900">
-              <span>Left Winger</span>
-            </td>
-    
-            <td class="text-sm text-green-700 font-bold px-4 py-2 whitespace-nowrap text-right">
-              <span>€600k</span>
+          {% endfor %}
+          {% else %}
+          <tr class="bg-white border-b">
+            <td>
+              <p class="text-xs text-left font-sm block w-auto p-1 color-text">SEM DADOS</p>
             </td>
           </tr>
+          {% endif %}
           
         </tbody>
       </table>
@@ -138,16 +121,17 @@
 <div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
   <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
 
-    <div class="table_tabs flex justify-evenly gap-1 relative z-10 w-[210px] rounded-t-md text-xs cursor-pointer pl-2 pr-3 py-1 shadow-[0px_2px_3px_-1px_rgba(0,0,0,0.1),0px_1px_0px_0px_rgba(25,28,33,0.02),0px_0px_0px_1px_rgba(25,28,33,0.08)]">
-      <div table="leagues" class="leagues_tab tab bg-white &.active:font-bold">LIGAS</div>
-      <div table="teams" class="teams_tab tab bg-white">EQUIPES</div>
-      <div table="players" class="players_tab tab bg-white">JOGADORES</div>
+    <div class="table_tabs flex justify-evenly gap-1 relative z-10 w-[250px] rounded-t-md text-xs cursor-pointer pl-2 pr-3 py-1 shadow-[0px_2px_3px_-1px_rgba(0,0,0,0.1),0px_1px_0px_0px_rgba(25,28,33,0.02),0px_0px_0px_1px_rgba(25,28,33,0.08)]">
+      <div table="leagues" class="leagues_tab tab bg-white {% if request.GET.tab == 'leagues' or not request.GET.tab %} font-bold {% endif %}">LIGAS</div>
+      <span class="inline-block mx-2">|</span>
+      <div table="teams" class="teams_tab tab bg-white {% if request.GET.tab == 'teams' %} font-bold {% endif %}">EQUIPES</div>
+      <span class="inline-block mx-2">|</span>
+      <div table="players" class="players_tab tab bg-white {% if request.GET.tab == 'players' %} font-bold {% endif %}">JOGADORES</div>
     </div>
 
     <div class="country_tables overflow-hidden relative z-10">
-      {% comment %} {% if request.GET.order == 'asc' %}&order=desc{% else %}&order=asc{% endif %} {% endcomment %}
       <!-- Table for displaying league data -->
-      <table class="{% if request.GET.tab == 'leagues' or not request.GET.tab %}{% else %} hidden {% endif %}leagues_table min-w-full">
+      <table class="rounded-lg {% if request.GET.tab == 'leagues' or not request.GET.tab %}{% else %} hidden {% endif %}leagues_table min-w-full">
         <thead class="bg-white border-b">
           <tr>
             <!-- Table headers -->
@@ -181,46 +165,54 @@
           </tr>
         </thead>
         <tbody>
-          <!-- Loop through league objects -->
-          {% for league in leagues %}
-          <!-- Alternating row colors -->
-          {% cycle 'bg-gray-100 border-b' 'bg-white border-b' as row_class silent %}
-          <tr class="{% if forloop.counter0|divisibleby:2 %}{{ row_class }}{% else %} bg-white border-b {% endif %}">
-            <!-- League data -->
-            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-              <img width="40" src="{{ league.small_img }}" class="min-w-[40px]" />
-            </td>
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-              <!-- League name -->
-              <a href="{% url 'league_detail' pk=league.pk %}" class="flex items-center justify-start gap-1">
-                <img src="{{ league.country_img }}" />
-                <span class="hover:underline"> {{ league.name }} </span>
-              </a>
-            </td>
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-              <!-- Expenses -->
-              <span> {{ league.outcomes|passToFloat }} </span>
-            </td>
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-              <!-- Income -->
-              <span>{{ league.incomes|passToFloat }}</span>
-            </td>
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-              <!-- Balance -->
-              {% if "-" in league.balance %}
-                  <span class="text-red-700 font-bold"> {{ league.balance | passToFloat }} </span>
-              {% else %}
-                  <span class="text-green-700 font-bold"> {{ league.balance | passToFloat }} </span>
-              {% endif %}
+          {% if leagues %}
+            <!-- Loop through league objects -->
+            {% for league in leagues %}
+            <!-- Alternating row colors -->
+            {% cycle 'bg-gray-100 border-b' 'bg-white border-b' as row_class silent %}
+            <tr class="{% if forloop.counter0|divisibleby:2 %}{{ row_class }}{% else %} bg-white border-b {% endif %}">
+              <!-- League data -->
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                <img width="40" src="{{ league.small_img }}" class="min-w-[40px]" />
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <!-- League name -->
+                <a href="{% url 'league_detail' pk=league.pk %}" class="flex items-center justify-start gap-1">
+                  <img src="{{ league.country_img }}" />
+                  <span class="hover:underline font-bold"> {{ league.name }} </span>
+                </a>
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <!-- Expenses -->
+                <span> {{ league.outcomes|passToFloat }} </span>
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <!-- Income -->
+                <span>{{ league.incomes|passToFloat }}</span>
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                <!-- Balance -->
+                {% if "-" in league.balance %}
+                    <span class="text-red-700 font-bold"> {{ league.balance | passToFloat }} </span>
+                {% else %}
+                    <span class="text-green-700 font-bold"> {{ league.balance | passToFloat }} </span>
+                {% endif %}
+              </td>
+            </tr>
+            {% endfor %}
+          {% else %}
+          <tr class="bg-white border-b">
+            <td>
+              <p class="text-xs text-left font-sm block w-auto p-1 color-text">SEM DADOS</p>
             </td>
           </tr>
-          {% endfor %}
+          {% endif %}
         </tbody>
       </table>
 
 
       <!-- Table for displaying team data -->
-      <table class="{% if request.GET.tab != 'teams' %} hidden {% endif %} teams_table min-w-full">
+      <table class="rounded-lg {% if request.GET.tab != 'teams' %} hidden {% endif %} teams_table min-w-full">
         <thead class="bg-white border-b">
           <tr>
             <!-- Table headers -->
@@ -253,6 +245,7 @@
         </thead>
         <tbody>
           <!-- Teams list -->
+          {% if leagues %}
           {% for team in teams %}
           <tr class="{% cycle 'bg-gray-100 border-b' 'bg-white border-b' %}">
             <!-- Team data -->
@@ -261,7 +254,7 @@
             </td>
             <td class="px-6 py-4 text-sm text-gray-900 font-light whitespace-nowrap">
               <!-- Team name -->
-              <a href="#" class="flex items-center justify-start gap-1 hover:underline">{{ team.name }}</a>
+              <a href="{% url 'team_detail' pk=team.pk %}" class="font-bold hover:underline">{{ team.name }}</a>
             </td>
             <td class="px-6 py-4 text-sm text-gray-900 font-light whitespace-nowrap">
               <!-- Average market value -->
@@ -277,16 +270,29 @@
             </td>
           </tr>
           {% endfor %}
+          {% else %}
+          <tr class="bg-white border-b">
+            <td>
+              <p class="text-xs text-left font-sm block w-auto p-1 color-text">SEM DADOS</p>
+            </td>
+          </tr>
+          {% endif %}
         </tbody>
       </table>
 
-      <!-- Table for displaying team data -->
-      <table class="{% if request.GET.tab != 'players' %} hidden {% endif %} players_table min-w-full">
+      <!-- Table for displaying player data -->
+      <table class="rounded-lg {% if request.GET.tab != 'players' %} hidden {% endif %} players_table min-w-full">
         <thead class="bg-white border-b">
           <tr>
             <th
               scope="col"
-              class="text-sm font-medium text-gray-900 px-6 py-4 text-center"
+              class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+            >
+                #
+            </th>
+            <th
+              scope="col"
+              class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
             >
             <a href="?tab=players">
 
@@ -329,29 +335,40 @@
             </th>
           </tr>
         </thead>
+
         <tbody>
-          {% for player in players %}
-          <tr class="{% cycle 'bg-gray-100 border-b' 'bg-white border-b' %}">
-            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900 flex flex-col justify-left align-center">
-              <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[52px] h-[52px] m-auto block" />
+          {% if players %}
+            {% for player in players %}
+            <tr class="{% cycle 'bg-gray-100 border-b' 'bg-white border-b' %}">
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                <img width="52" height="52" src="{{ player.img }}" class="object-cover rounded-full w-[52px] h-[52px] block" />
+              </td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
                 <a href="#" class="gap-1 text-center hover:underline">
                   {{ player.name }}
                 </a>
-            </td>
+              </td>
 
-            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
-              <span>{{ player.pos }}</span>
-            </td>
+              <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
+                <span>{{ player.pos }}</span>
+              </td>
 
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-                <span class="hover:underline">{{ player.birth }}</span>
-            </td>
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
-            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap text-right">
-              <span>{{ player.value_market }}</span>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+                  <span class="hover:underline">{{ player.birth }}</span>
+              </td>
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap text-right">
+                <span class="text-green-700 font-bold">{{ player.value_market|passToFloat }}</span>
+              </td>
+            </tr>
+            {% endfor %}
+          {% else %}
+          <tr class="bg-white border-b">
+            <td>
+              <p class="text-xs text-left font-sm block w-auto p-1 color-text">SEM DADOS</p>
             </td>
           </tr>
-          {% endfor %}
+          {% endif %}
         </tbody>
       
       </table>
@@ -362,7 +379,9 @@
 
 <script>
   document.querySelectorAll(".tab").forEach(item=>{
+
     item.addEventListener("click", (e)=>{
+      e.target.classList.add("font-bold");
       tab_table = e.currentTarget.getAttribute("table")
 
       document.querySelectorAll(".country_tables table.min-w-full").forEach(table=>{
@@ -372,6 +391,11 @@
           table.classList.add("hidden")
         }
       })
+
+      document.querySelectorAll(`.tab:not([table='${tab_table}'])`).forEach(item=>{
+        item.classList.remove("font-bold")
+      })
+
     })
 
   })
