--- a/countries/templates/countries/country_detail.html
+++ b/countries/templates/countries/country_detail.html
@@ -20,7 +20,7 @@
 
 <div class="highlights mb-6 mt-8 flex justify-start gap-6 px-8">
   <div class='w-[20%]'>
-    <p class="text-xs text-left font-sm block w-auto p-1 color-text absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
+    <p class="text-xs text-left font-sm block w-auto color-text absolute transform translate-y-[-100%]">PRINCIPAL LIGA</p>
     <div class="highlight_card h-full w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
       {% if top_league %}
       <div class="flex flex-col items-center py-5 px-4">
@@ -35,7 +35,7 @@
   </div>
 
   <div class='w-[20%]'>
-    <p class="text-xs text-left font-sm block w-auto p-1 color-text absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
+    <p class="text-xs text-left font-sm block w-auto color-text absolute transform translate-y-[-100%]">TIME MAIS VALIOSO</p>
     <div class="highlight_card h-full w-full max-w-sm bg-white border border-gray-200 rounded-lg shadow">
       {% if top_team %}
       <div class="flex flex-col items-center py-5 px-4">
@@ -50,12 +50,12 @@
   </div>
 
   <div class="relative w-[60%]">
-    <p class="text-xs text-center block w-auto p-1 color-text absolute transform translate-y-[-100%]">TOP JOGADORES QUE JOGAM NO PAÍS</p>
+    <p class="text-xs text-center block w-auto color-text absolute transform translate-y-[-100%]">TOP 3 JOGADORES QUE JOGAM NO PAÍS</p>
 
     <!-- Table for displaying league data -->
     <div class="overflow-auto shadow">
       <table class="min-w-full h-full rounded-lg overflow-hidden">
-                <thead class="bg-white border-b">
+        <thead class="bg-white border-b">
           <tr>
             <th
               scope="col"
@@ -70,7 +70,12 @@
             >
                 Posição
             </th>
-            
+            <th
+              scope="col"
+              class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
+            >
+                País de origem 
+            </th>
             <th
               scope="col"
               class="text-sm font-medium text-gray-900 px-6 py-4 text-right"
@@ -95,7 +100,10 @@
             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">
               <span>{{ player.pos }}</span>
             </td>
-
+            <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
+              <img src="{{ player.country_flag }}"  title="{{ player.country_name }}" class="inline-block"/>
+              <span>{{ player.country_name }}</span>
+            </td>
             <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap text-right">
               <span class="text-green-700 font-bold">{{ player.value_market|passToFloat }}</span>
             </td>
@@ -118,7 +126,7 @@
 
 
 <!-- Overflow container for horizontal scrolling -->
-<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5">
+<div class="overflow-x-auto sm:mx-0.5 lg:mx-0.5 ">
   <div class="py-2 inline-block min-w-full sm:px-6 lg:px-8">
 
     <div class="table_tabs flex justify-evenly gap-1 relative z-10 w-[250px] rounded-t-md text-xs cursor-pointer pl-2 pr-3 py-1 shadow-[0px_2px_3px_-1px_rgba(0,0,0,0.1),0px_1px_0px_0px_rgba(25,28,33,0.02),0px_0px_0px_1px_rgba(25,28,33,0.08)]">
@@ -129,7 +137,7 @@
       <div table="players" class="players_tab tab bg-white {% if request.GET.tab == 'players' %} font-bold {% endif %}">JOGADORES</div>
     </div>
 
-    <div class="country_tables overflow-hidden relative z-10">
+    <div class="country_tables overflow-hidden relative z-10 shadow rounded-md rounded-tl-[0px]">
       <!-- Table for displaying league data -->
       <table class="rounded-lg {% if request.GET.tab == 'leagues' or not request.GET.tab %}{% else %} hidden {% endif %}leagues_table min-w-full">
         <thead class="bg-white border-b">
@@ -138,26 +146,29 @@
             <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">#</th>
             <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
               <!-- Column header for league name -->
-              <a href="?tab=leagues">
+              <a href="?tab=leagues&field_league=name{% if request.GET.order_league == 'asc' %}&order_league=desc{% else %}&order_league=asc{% endif %}">  
                 Liga 
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
             <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
               <!-- Column header for expenses -->
-              <a href="?tab=leagues">                Despesas 
+              <a href="?tab=leagues&field_league=outcomes{% if request.GET.order_league == 'asc' %}&order_league=desc{% else %}&order_league=asc{% endif %}">                 
+                Despesas 
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
             <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
               <!-- Column header for income -->
-              <a href="?tab=leagues">                Renda 
+              <a href="?tab=leagues&field_league=incomes{% if request.GET.order_league == 'asc' %}&order_league=desc{% else %}&order_league=asc{% endif %}">                   
+                Renda 
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
             <th scope="col" class="text-sm font-medium text-gray-900 px-6 py-4 text-left">
               <!-- Column header for balance -->
-              <a href="?tab=leagues">                Saldo 
+              <a href="?tab=leagues&field_league=balance{% if request.GET.order_league == 'asc' %}&order_league=desc{% else %}&order_league=asc{% endif %}">     
+                 Saldo 
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
@@ -219,19 +230,19 @@
             <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 text-left">#</th>
             <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 text-left">
               <!-- Column header for team name -->
-              <a href="?tab=teams">
+              <a href="?tab=teams&field_team=name{% if request.GET.order_team == 'asc' %}&order_team=desc{% else %}&order_team=asc{% endif %}">
                 Equipe <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
             <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 text-left">
               <!-- Column header for average market value -->
-              <a href="?tab=teams">
+              <a href="?tab=teams&field_team=average_market_value{% if request.GET.order_team == 'asc' %}&order_team=desc{% else %}&order_team=asc{% endif %}">
                 Valor médio de mercado <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
             <th scope="col" class="px-6 py-4 text-sm font-medium text-gray-900 text-right">
               <!-- Column header for total market value -->
-              <a href="?tab=teams">
+              <a href="?tab=teams&field_team=total_market_value{% if request.GET.order_team == 'asc' %}&order_team=desc{% else %}&order_team=asc{% endif %}">
                 Valor de mercado total <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
@@ -294,7 +305,7 @@
               scope="col"
               class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
             >
-            <a href="?tab=players">
+            <a href="?tab=players&field_player=name{% if request.GET.order_player == 'desc' %}&order_player=asc{% else %}&order_player=desc{% endif %}">
 
                 Jogador
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -304,8 +315,8 @@
             scope="col"
             class="text-sm font-medium text-gray-900 px-6 py-4 text-left"s
           >
-            <a href="?tab=players">
-              Posição
+          <a href="?tab=players&field_player=pos{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
+            Posição
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </a>
           </th>
@@ -313,8 +324,8 @@
               scope="col"
               class="text-sm font-medium text-gray-900 px-6 py-4 text-left"
             >
-            <a href="?tab=players">
-                Nascimento              
+            <a href="?tab=players&field_player=birth{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
+              Nascimento              
                  <i class="fa fa-caret-down" aria-hidden="true"></i>
               </a>
             </th>
@@ -327,7 +338,7 @@
               scope="col"
               class="text-sm font-medium text-gray-900 px-6 py-4 text-right"
             >
-            <a href="?tab=players">
+            <a href="?tab=players&field_player=value_market{% if request.GET.order_player == 'asc' %}&order_player=desc{% else %}&order_player=asc{% endif %}">
 
                 Valor de mercado 
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
@@ -401,5 +412,5 @@
   })
 </script>
 <!-- Include pagination -->
-{% include 'atomic/organisms/detail_pagination.html' %}
+{% include './paginator_leagues.html' %}
 {% endblock detail_content %}
