--- a/countries/templates/countries/paginator_teams.html
+++ b/countries/templates/countries/paginator_teams.html
@@ -1,7 +1,7 @@
 {% load custom_filters %} 
 
-{% if paginator_leagues.num_pages > 1 %}
-  <div tab="leagues" class="pagination pagination_leagues mt-4 sm:px-6 lg:px-8 {% if request.GET.tab == 'leagues' or not request.GET.tab %}{% else %} hidden {% endif %}">
+{% if paginator_teams.num_pages > 1 %}
+  <div tab="teams" class="pagination pagination_teams mt-4 sm:px-6 lg:px-8 {% if request.GET.tab != 'teams' %} hidden {% endif %}">
     <span class="text-sm text-gray-700 flex gap-1 pb-5 items-center step-links">
       {% if related_items.has_previous %}
         <a href="{{ url|set_pagination_params }}page=1" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
@@ -11,13 +11,13 @@
         <a href="{{ url|set_pagination_params }}page={{ related_items.previous_page_number }}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm"><i class="fa fa-caret-left" aria-hidden="true"></i></a>
       {% endif %}
 
-      <input class="font-bold text-center w-[15px] bg-transparent" max="{{ paginator_leagues.num_pages }}" id="paginationInputLeague" min="1" type="number"  value="{{ related_items.number }}"/>
+      <input class="font-bold text-center w-[15px] bg-transparent" max="{{ paginator_teams.num_pages }}" id="paginationInputTeams" min="1" type="number"  value="{{ related_items.number }}"/>
       /
-      <span class="font-bold">{{ paginator_leagues.num_pages }}</span>
+      <span class="font-bold">{{ paginator_teams.num_pages }}</span>
 
       {% if related_items.has_next %}
         <a href="{{ url|set_pagination_params }}page={{ related_items.next_page_number }}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm"><i class="fa fa-caret-right" aria-hidden="true"></i></a>
-        <a href="{{ url|set_pagination_params }}page={{ paginator_leagues.num_pages }}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
+        <a href="{{ url|set_pagination_params }}page={{ paginator_teams.num_pages }}" class="h-6 w-6 bg-white flex items-center justify-center rounded-sm">
           <i class="fa fa-caret-right" aria-hidden="true"></i>
           <i class="fa fa-caret-right" aria-hidden="true"></i>
         </a>
